k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test2-app
  namespace: test-app
  labels:
    app: test2-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test2-app
  template:
    metadata:
      labels:
        app: test2-app
    spec:
      containers:
      - name: test2-app
        image: ghcr.io/mswootest/test2:v0.0.6
        ports:
        - containerPort: 8000
