k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test2-service
  namespace: test-app
  labels:
    app: test2-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: test2-app
